# ObjectRecognition

./: README.md  model.ply
AveragingClouds/: CMakeLists.txt  CMakeLists.txt~  average_cloud.cpp  smooth_cloud.cpp  smooth_cloud.h
BoilerPlate_code/: CMakeLists.txt~  Grab_test.cpp  Grabbing.cpp
BoundingBox/: boundingBox.cpp  boundingBox.h  moment_of_inertia2.cpp
BoundingBox/Standard/: moment_of_inertia.cpp
BoundingBox/Version2/: CMakeLists.txt  CMakeLists.txt~  boundingBox.cpp  boundingBox.h  moment_of_inertia2.cpp
CubeTesting/: CMakeLists.txt  CMakeLists.txt~  CubeCreator.cpp  CubeCreator.h  cubeTester.cpp  keypoints.cpp  keypoints.h  planar_filtering.h
Depth2Image/: CMakeLists.txt  CMakeLists.txt~  Depth2Image.cpp
Downsample/: CMakeLists.txt  Downsample.cpp  Untitled2
Grabber/: CMakeLists.txt  Grabber.cpp
Histogram_Matlab/: CMakeLists.txt  CMakeLists.txt~  histogram.cpp  recognition_features.cpp  recognition_features.h
Histogram_Matlab/Dataset/: Speaker0.pcd  Speaker1.pcd  Speaker3.pcd  Speaker4.pcd  Spk2.pcd  curv_spk3.pcd
Keypoints/: CMakeLists.txt  CMakeLists.txt~  Documentation  Documentation~  Untitled1  keypoints.cpp  keypoints.h  keypoints_realtime.cpp  planar_filtering.cpp  prevruncommand.txt  prevruncommand.txt~
Keypoints/HarrisKeypoints/: keypoints.cpp  keypoints.h  keypoints_realtime.cpp
MultiCloudProcessor/: CMakeLists.txt~  Thresholds.txt  multiprocessor.cpp
MultiPlaneSegmentation/: CMakeLists.txt  CMakeLists.txt~  multi_plane_segmentation.cpp
Multithreading/Cloud_Viewer/: CMakeLists.txt~  cloud_viewer.cpp  cloud_viewer_multi.cpp  planar_filtering.cpp  planar_filtering.h
Multithreading/Cloud_Viewer/Dataset/: curv_spk1.pcd
Normal_estimation/: CMakeLists.txt~  normal_estimation.cpp
Normal_estimation/viewer/: CMakeLists.txt  normals_viewer.cpp
Organized_Segmentation/: CMakeLists.txt  organized_segmentation.cpp  organized_segmentation_demo.h
QTprojects/CloudProcessor/: data.txt  data.txt~
QTprojects/CloudProcessor/src/: pclviewer.cpp  pclviewer.h  pclviewer.ui
QTprojects/CorrespondenceGrouping/src/: correspondence_grouping.cpp  correspondence_grouping.h  keypoints.cpp  keypoints.h  pclviewer.cpp  pclviewer.ui
QTprojects/HarrisKeypoints/src/: CMakeLists.txt  CubeCreator.cpp  CubeCreator.h  keypoints.cpp  keypoints.h  pclviewer.cpp  pclviewer.h  pclviewer.ui
QTprojects/Keypoints/src/: CubeCreator.cpp  CubeCreator.h  keypoints.h  pclviewer.cpp  pclviewer.h  pclviewer.ui
Recognizer_Classes/: CMakeLists.txt  CMakeLists.txt~  Model.pcd  Recognizer.cpp  planar_filtering.cpp  planar_filtering.h  recognition_features.cpp  recognition_features.h
Recognizer_Classes/Dataset/: Speaker2.pcd
Segmentation/: CMakeLists.txt  CMakeLists.txt~  planar_filtering.cpp  planar_filtering.h  segmentation.cpp
Statistical_Outlier/: CMakeLists.txt  CMakeLists.txt~  filter.cpp
Template_alignment/: CMakeLists.txt  template_alignment.cpp
Template_alignment/data/: Templates.txt  jars0.pcd  jars11.pcd  jars13.pcd  jars15.pcd  jars16.pcd  jars17.pcd  jars2.pcd  jars6.pcd  jars7.pcd  jars8.pcd  jars9.pcd
Upscaling/: CMakeLists.txt  key0.pcd  key1.pcd  upscaling.cpp
backup_files/qt_visualizer/src/: pclviewer.cpp  pclviewer.h  pclviewer.ui
corr_finder/: CMakeLists.txt  corr_finder.cpp
correspondence_grouping/: milk_carton.pcd
correspondence_grouping/Standard/: CMakeLists.txt  correspondence_grouping.cpp  processcloud.cpp
correspondence_grouping/Standard/ProcessCloud/: CMakeLists.txt  CMakeLists.txt~  processcloud2.cpp
correspondence_grouping/Standard/ProcessCloud/dataset/: key2.pcd  key3.pcd  key4.pcd  key5.pcd  key6.pcd  key7.pcd  key8.pcd  key9.pcd
correspondence_grouping/Standard/RAM_dataset/: README.txt  README.txt~
correspondence_grouping/Version2/: CMakeLists.txt  CMakeLists.txt~  correspondence_grouping.cpp  keypoints.cpp  keypoints.h  planar_filtering.cpp  planar_filtering.h
customply2pcd/: CMakeLists.txt  customtxt2pcd.cpp
customply2pcd/process_skanect_ply/: a.out  customply2pcd  customply2pcd.cpp  documentation  documentation~
openniViewer/: CMakeLists.txt  openniViewer.cpp
pcd2ply/: CMakeLists.txt  CMakeLists.txt~  pcd2ply.cpp
ply2pcd/: CMakeLists.txt  ply2pcd.cpp
ply2pcd/dataset/: milkjug.ply  odwalla_jug.ply  orange_juice_jug.ply  peroxide.ply  pur_water_pitcher_filter.ply  tide.ply
(+86 files in other folders)
